syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Origin {
  string gateway_id = 1;
  string node_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  bool is_synced = 4;
  string snapshot_id = 5;
}

message RenamedOrigin {
  string gateway_id = 1;
  string node_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  bool is_synced = 4;
  string snapshot_id = 5;
}
